--- a/toaster/toaster.css
+++ b/toaster/toaster.css
@@ -3,8 +3,8 @@
 .pulsar {
   background: rgba(64, 150, 239, 1);
   border-radius: 50%;
-  height: 4rem;
-  width: 4rem;
+  height: 3rem;
+  width: 3rem;
 
   box-shadow: 0 0 0 0 rgba(64, 150, 239, 1);
   transform: scale(1);
@@ -31,16 +31,24 @@
 
 /** Misc styling **/
 .toast {
-  min-width: 400px;
+  /* min-width: 400px;
   border-radius: 3rem;
-  padding: 0.75rem;
+  padding: 0.75rem; */
 
-  /* Make the whole thing look clickable */
-  /* cursor: pointer; */
+  /* Inherit Product Alliance font */
+  font-family: Inter, sans-serif;
 }
 
 .toast a {
   text-decoration: underline;
+}
+
+.toast-icon {
+  font-size: 1.35rem;
+}
+
+.toast-separator {
+  line-height: 35%;
 }
 
 .clickable {
