--- a/toaster/toaster.css
+++ b/toaster/toaster.css
@@ -3,8 +3,8 @@
 .pulsar {
   background: rgba(64, 150, 239, 1);
   border-radius: 50%;
-  height: 4rem;
-  width: 4rem;
+  height: 5rem;
+  width: 5rem;
 
   box-shadow: 0 0 0 0 rgba(64, 150, 239, 1);
   transform: scale(1);
@@ -31,20 +31,20 @@
 
 /** Misc styling **/
 .toast {
-  /* min-width: 400px;
-  border-radius: 3rem;
-  padding: 0.75rem; */
+  min-width: 550px;
+  border-radius: 5rem;
+  padding: 0.75rem;
 
   /* Inherit Product Alliance font */
   font-family: Inter, sans-serif;
 }
 
-.toast a {
+/* .toast a {
   text-decoration: underline;
-}
+} */
 
 .toast-icon {
-  font-size: 1.6rem;
+  font-size: 2.0rem;
 }
 
 .toast-separator {
@@ -62,4 +62,17 @@
   bottom: 0;
   left: 0;
   margin: 1rem;
+}
+
+.arrow-button {
+  color: rgba(64, 150, 239, 1);
+  font-size: 1.5rem;
+
+  /* Make it sorta horizontally centered */
+  position: relative;
+  left: -0.5rem;
+}
+
+.cta-separator {
+  line-height: 50%;
 }
