--- a/toaster/toaster.css
+++ b/toaster/toaster.css
@@ -103,6 +103,14 @@
   text-decoration: none;
 }
 
+.toast-text {
+  padding-right: 0.4em !important;
+}
+
 .full-height {
   height: 100%;
+}
+
+.dismiss-x {
+  padding-left: 0.25em !important;
 }
