--- a/toaster/toaster.css
+++ b/toaster/toaster.css
@@ -1,3 +1,8 @@
+/* Customize the bootstrapiso area */
+.bootstrapiso {
+  background: rgba(255, 255, 255, 0) !important;
+}
+
 /* From https://www.florin-pop.com/blog/2019/03/css-pulse-effect/ */
 /* Creates a pulsing ball */
 .pulsar {
