--- a/styles/kjb.css
+++ b/styles/kjb.css
@@ -1,22 +1,22 @@
-.kdpqo-button { display: none; }
-.kdpqo-button-wrapper { display: none; }
-.qplxz-button { display: none; }
-.qplxz-button-wrapper { display: none; }
-.vnmzl-button { display: none; }
-.vnmzl-button-wrapper { display: none; }
-.zrehx-button { display: none; }
-.zrehx-button-wrapper { display: none; }
-.oibhy-button { display: none; }
-.oibhy-button-wrapper { display: none; }
-.ucbzx-button { display: none; }
-.ucbzx-button-wrapper { display: none; }
-.lkbuy-button { display: none; }
-.lkbuy-button-wrapper { display: none; }
-.nhtti-button { display: none; }
-.nhtti-button-wrapper { display: none; }
-.mcvqh-button { display: none; }
-.mcvqh-button-wrapper { display: none; }
-.ikdbr-button { display: none; }
-.ikdbr-button-wrapper { display: none; }
-.kuohb-button { display: none; }
-.kuohb-button-wrapper { display: none; }
+.kdpqo-button { display: none !important; }
+.kdpqo-button-wrapper { display: none !important; }
+.qplxz-button { display: none !important; }
+.qplxz-button-wrapper { display: none !important; }
+.vnmzl-button { display: none !important; }
+.vnmzl-button-wrapper { display: none !important; }
+.zrehx-button { display: none !important; }
+.zrehx-button-wrapper { display: none !important; }
+.oibhy-button { display: none !important; }
+.oibhy-button-wrapper { display: none !important; }
+.ucbzx-button { display: none !important; }
+.ucbzx-button-wrapper { display: none !important; }
+.lkbuy-button { display: none !important; }
+.lkbuy-button-wrapper { display: none !important; }
+.nhtti-button { display: none !important; }
+.nhtti-button-wrapper { display: none !important; }
+.mcvqh-button { display: none !important; }
+.mcvqh-button-wrapper { display: none !important; }
+.ikdbr-button { display: none !important; }
+.ikdbr-button-wrapper { display: none !important; }
+.kuohb-button { display: none !important; }
+.kuohb-button-wrapper { display: none !important; }
