--- a/toaster/toaster.css
+++ b/toaster/toaster.css
@@ -43,9 +43,10 @@
   font-family: Inter, sans-serif;
 }
 
-/* .toast a {
+.toast a:hover {
   text-decoration: underline;
-} */
+  opacity: 100%;
+}
 
 .toast-icon {
   font-size: 1.5rem;
