--- a/toaster/toaster.css
+++ b/toaster/toaster.css
@@ -6,17 +6,73 @@
 /* From https://www.florin-pop.com/blog/2019/03/css-pulse-effect/ */
 /* Creates a pulsing ball */
 .pulsar {
-  background: rgba(16, 96, 236, 1);
+  /** New: we will vary the coloring between sites, but the
+      other settings will stay the same */
+  /* background: rgba(16, 96, 236, 1); */
   border-radius: 50%;
   height: 3rem;
   width: 3rem;
 
-  box-shadow: 0 0 0 0 rgba(16, 96, 236, 1);
+  /* box-shadow: 0 0 0 0 rgba(16, 96, 236, 1); */
   transform: scale(1);
-  animation: pulse 3s infinite;
+  /* animation: pulse 3s infinite; */
+}
+.pulsar.engauthority {
+  /* This site's chief color is #21bc65 */
+  background: rgba(33, 188, 101, 1);
+  box-shadow: 0 0 0 0 rgba(33, 188, 101, 1);
+  animation: pulse_engauthority 3s infinite;
+}
+.pulsar.uplevel {
+  /* This site's chief color is #0097ee */
+  background: rgba(0, 151, 238, 1);
+  box-shadow: 0 0 0 0 rgba(0, 151, 238, 1);
+  animation: pulse_uplevel 3s infinite;
+}
+.pulsar.classic {
+  /* For classic PA colors, which are
+     standardized and known to look good */
+  background: rgba(16, 96, 236, 1);
+  box-shadow: 0 0 0 0 rgba(16, 96, 236, 1);
+  animation: pulse_classic 3s infinite;
 }
 
-@keyframes pulse {
+/* Animations for the pulsar */
+@keyframes pulse_engauthority {
+  0% {
+    transform: scale(1);
+    box-shadow: 0 0 0 0 rgba(33, 188, 101, 0.7);
+  }
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 1rem rgba(33, 188, 101, 0);
+  }
+
+  100% {
+    transform: scale(1);
+    box-shadow: 0 0 0 0 rgba(33, 188, 101, 0);
+  }
+}
+
+@keyframes pulse_uplevel {
+  0% {
+    transform: scale(1);
+    box-shadow: 0 0 0 0 rgba(0, 151, 238, 0.7);
+  }
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 1rem rgba(0, 151, 238, 0);
+  }
+
+  100% {
+    transform: scale(1);
+    box-shadow: 0 0 0 0 rgba(0, 151, 238, 0);
+  }
+}
+
+@keyframes pulse_classic {
   0% {
     transform: scale(1);
     box-shadow: 0 0 0 0 rgba(16, 96, 236, 0.7);
@@ -69,7 +125,13 @@
   margin: 1rem;
 }
 
-.toast-body strong {
+.toast-body.engauthority strong {
+  color: rgba(33, 188, 101, 1);
+}
+.toast-body.uplevel strong {
+  color: rgba(0, 151, 238, 1);
+}
+.toast-body.classic strong {
   color: rgba(16, 96, 236, 1);
 }
 
